RESOLVED FIXED152373
REGRESSION (r191299): Zoom gestures are enabled even if allowsMagnification=NO
https://bugs.webkit.org/show_bug.cgi?id=152373
Summary REGRESSION (r191299): Zoom gestures are enabled even if allowsMagnification=NO
Tim Horton
Reported 2015-12-16 18:57:40 PST
REGRESSION (r191299): Zoom gestures are enabled even if allowsMagnification=NO
Attachments
Patch (1.64 KB, patch)
2015-12-16 18:58 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-12-16 18:58:54 PST
Tim Horton
Comment 2 2015-12-16 19:01:11 PST
I guess I should write a test.
Tim Horton
Comment 3 2015-12-16 19:01:23 PST
Oh wait, not yet.
Tim Horton
Comment 4 2015-12-16 19:05:16 PST
Note You need to log in before you can comment on or make changes to this bug.