REGRESSION (r191299): Zoom gestures are enabled even if allowsMagnification=NO https://bugs.webkit.org/show_bug.cgi?id=152373 <rdar://problem/23931998>

Reviewed by Simon Fraser.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::gestureEventWasNotHandledByWebCoreFromViewOnly):
Don't pass the event on to ViewGestureController if we shouldn't handle it,
just like we would have done in magnifyWithEvent before.


Canonical link: https://commits.webkit.org/170484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194205 268f45cc-cd09-0410-ab3c-d52691b4dbfc